#1448: Fix spacing issues for Emergency and Country page with action buttons

--- a/src/styles/country/_global.scss
+++ b/src/styles/country/_global.scss
@@ -35,7 +35,6 @@
   }
 
   .inpage__header {
-    margin-bottom: $global-spacing * 2;
     .content-list-group {
       @include column(12/12);
     }
