--- a/src/styles/home/_global.scss
+++ b/src/styles/home/_global.scss
@@ -129,6 +129,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    min-width: 150px;
     position: relative;
     margin-bottom: $spacing-2;
 
